--- a/src/components/Computer/Toolbar/Toolbar.css
+++ b/src/components/Computer/Toolbar/Toolbar.css
@@ -7,6 +7,10 @@
   display: flex;
   align-items: center;
   padding: 0 1rem;
+
+  /* position and z-index are set so that WinBoxes don't cover Toolbar. */
+  position: sticky;
+  z-index: 100;
 }
 
 #time {
